# server-tui

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  main.rs  mods.rs
src/api/: systemctl.rs
src/models/: event_bus_field_type.rs  event_bus_message.rs  event_type.rs  mod.rs  socket_message.rs
src/services/: datetime.rs  event_bus.rs  hw_usage.rs  mod.rs  process_watcher.rs  socket.rs
src/utils/: bytes_helper.rs  layout.rs  mod.rs
src/widgets/: current_status.rs  datetime.rs  disks.rs  hardware.rs  journalctl.rs  mod.rs  podman.rs  systemctl_stats.rs
src/widgets/controllers/: current_status.rs  datetime.rs  hardware.rs  mod.rs
