[package]
name = "server-tui"
version = "0.1.1"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = [ "unstable-widget-ref" ] }
serde = { version = "1.0.217", features = ["serde_derive", "derive"] }
serde_json = "1.0.134"
sysinfo = "0.32.0"
systemctl = "0.4.0"
systemd = "0.10.0"
tokio = { version = "1.42.0", features = ["full"] }
